<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlyt_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/group_padding"
            android:text="青羊区"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_text_change" />

        <ImageView
            android:id="@+id/iv_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_local"
            android:layout_toRightOf="@id/tv_local"
            android:paddingTop="@dimen/bar_text"
            android:paddingLeft="8dp"
            android:paddingBottom="@dimen/bar_text"
            android:src="@drawable/icon_arrows" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/bar_margin"
            android:src="@drawable/icon_select" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/llyt_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rlyt_hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_hot"
                android:layout_width="@dimen/title_line_width"
                android:layout_height="@dimen/title_line_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/title_background"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tv_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_hot"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_text_change" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_hotpot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_hotpot"
                android:layout_width="@dimen/title_line_width"
                android:layout_height="@dimen/title_line_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/title_background"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_hotpot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_hotpot"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_text_change" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_western"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_western"
                android:layout_width="@dimen/title_line_width"
                android:layout_height="@dimen/title_line_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/title_background"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_western"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_western"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_text_change" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_dessert"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_dessert"
                android:layout_width="@dimen/title_line_width"
                android:layout_height="@dimen/title_line_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/title_background"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_dessert"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_text_change" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_drink"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_drink"
                android:layout_width="@dimen/title_line_width"
                android:layout_height="@dimen/title_line_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/title_background"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_drink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_drink"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/title_text_change" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llyt_species" />


</LinearLayout>